deploy: 13365588a4344cf8f15d31e304372edc68d31381

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/deseret/commit/ea3eb37
-"><code>ea3eb37
+					<a href="https://github.com/notofonts/deseret/commit/1336558
+"><code>1336558
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -60,7 +60,7 @@
 			</div>
 		</nav>
 		<div class="relative">
-			<h1 class="display-3 heading noto">𐐃𐐫𐐢𐑊 𐐐𐐸 𐐸𐐷𐐭𐑋𐐲𐑌 𐐺𐐨𐐮𐑍𐑆 𐐪𐑉 𐑁𐑉𐐨 𐐰𐑌𐐼 𐐨𐐿𐐶𐐲𐑊 𐐇𐑂𐑉𐐨𐐶𐐲𐑌 𐐯𐑌𐐻𐐴𐐻𐐲𐑊𐐼 𐑄 𐑉𐐴𐐻𐑅 𐑁𐐬𐑉𐑃 𐐤𐐬 𐑇𐐰𐑊 𐑅𐑊𐐩𐑂𐐲𐑉𐐨 𐐹𐑉𐐬𐐸𐐮𐐺𐐮𐐻𐐲𐐼 𐐼𐐮𐑀𐑌𐐮𐐻𐐨 𐐜𐐩 𐐯𐑌𐐼𐐵𐐲𐐼 𐑇𐐳𐐼 𐑅𐐲𐐽 𐐃𐐫𐐢𐑊 𐐐𐐸 𐐸𐐷𐐭𐑋𐐲𐑌 𐐺𐐨𐐮𐑍𐑆 𐐪𐑉 𐑁𐑉𐐨 𐐰𐑌𐐼 𐐨𐐿𐐶𐐲𐑊 𐐇𐑂𐑉𐐨𐐶𐐲𐑌 𐐯𐑌𐐻𐐴𐐻𐐲𐑊𐐼 𐑄 𐑉𐐴𐐻𐑅 𐑁𐐬𐑉𐑃 𐐤𐐬 𐑇𐐰𐑊 𐑅𐑊𐐩𐑂𐐲𐑉𐐨 𐐹𐑉𐐬𐐸𐐮𐐺𐐮𐐻𐐲𐐼 𐐼𐐮𐑀𐑌𐐮𐐻𐐨 𐐜𐐩 𐐯𐑌𐐼𐐵𐐲𐐼 𐑇𐐳𐐼 𐑅𐐲𐐽</h1>
+			<h1 class="display-3 heading noto">𐐃𐐫𐐢𐑊 𐐐𐐸 𐐸𐐷𐐭𐑋𐐲𐑌 𐐺𐐨𐐮𐑍𐑆 𐐪𐑉 𐑁𐑉𐐨 𐐰𐑌𐐼 𐐨𐐿𐐶𐐲𐑊 𐐇𐑂𐑉𐐨𐐶𐐲𐑌 𐐯𐑌𐐻𐐴𐐻𐐲𐑊𐐼 𐑄 𐑉𐐴𐐻𐑅 𐑁𐐬𐑉𐑃 𐐤𐐬 𐑇𐐰𐑊 𐑅𐑊𐐩𐑂𐐲𐑉𐐨 𐐹𐑉𐐬𐐸𐐮𐐺𐐮𐐻𐐲𐐼 𐐼𐐮𐑀𐑌𐐮𐐻𐐨 𐐜𐐩 𐐯𐑌𐐼𐐵𐐲𐐼 𐑇𐐳𐐼 𐑅𐐲𐐽 𐐾𐐳𐑉𐐮𐑅𐐻𐑅𐐿𐑇𐐱𐑌𐐰𐑊 𐐃𐐫𐐢𐑊 𐐐𐐸 𐐸𐐷𐐭𐑋𐐲𐑌 𐐺𐐨𐐮𐑍𐑆 𐐪𐑉 𐑁𐑉𐐨 𐐰𐑌𐐼 𐐨𐐿𐐶𐐲𐑊 𐐇𐑂𐑉𐐨𐐶𐐲𐑌 𐐯𐑌𐐻𐐴𐐻𐐲𐑊𐐼 𐑄 𐑉𐐴𐐻𐑅 𐑁𐐬𐑉𐑃 𐐤𐐬 𐑇𐐰𐑊 𐑅𐑊𐐩𐑂𐐲𐑉𐐨 𐐹𐑉𐐬𐐸𐐮𐐺𐐮𐐻𐐲𐐼 𐐼𐐮𐑀𐑌𐐮𐐻𐐨 𐐜𐐩 𐐯𐑌𐐼𐐵𐐲𐐼 𐑇𐐳𐐼 𐑅𐐲𐐽 𐐾𐐳𐑉𐐮𐑅𐐻𐑅𐐿𐑇𐐱𐑌𐐰𐑊</h1>
 
 			<div class="container p-5">
 				<h3>Fonts (HEAD build)</h3>
@@ -68,24 +68,30 @@
 				
 				<h4>Noto Sans Deseret</h4>
 				<div class="row align-items-start"><ul>
+<li class="li-0">googlefonts<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansDeseret/googlefonts/ttf/NotoSansDeseret-Regular.ttf"> NotoSansDeseret-Regular.ttf</a></li>
+ </ul>
+ </ul>
+<li class="li-0">hinted<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansDeseret/hinted/ttf/NotoSansDeseret-Regular.ttf"> NotoSansDeseret-Regular.ttf</a></li>
+ </ul>
+ </ul>
 <li class="li-0">full<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansDeseret/full/ttf/NotoSansDeseret-Regular.ttf"> NotoSansDeseret-Regular.ttf</a></li>
  </ul>
- </ul>
-<li class="li-0">googlefonts<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansDeseret/googlefonts/ttf/NotoSansDeseret-Regular.ttf"> NotoSansDeseret-Regular.ttf</a></li>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansDeseret/full/otf/NotoSansDeseret-Regular.otf"> NotoSansDeseret-Regular.otf</a></li>
  </ul>
  </ul>
 <li class="li-0">unhinted<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansDeseret/unhinted/ttf/NotoSansDeseret-Regular.ttf"> NotoSansDeseret-Regular.ttf</a></li>
  </ul>
- </ul>
-<li class="li-0">hinted<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansDeseret/hinted/ttf/NotoSansDeseret-Regular.ttf"> NotoSansDeseret-Regular.ttf</a></li>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansDeseret/unhinted/otf/NotoSansDeseret-Regular.otf"> NotoSansDeseret-Regular.otf</a></li>
  </ul>
  </ul>
  </ul></div>
@@ -105,26 +111,34 @@
 
 				<ul>
 										<li>
-						<a href="fontbakery/googlefonts-NotoSansDeseret-report.html">FontBakery Report (Google Fonts)</a>
+						<a href="fontbakery/notofonts-NotoSansDeseret-googlefonts-report.html">FontBakery Report (Google Fonts)</a>
 					</li>
 									</ul>
 
 				<ul>
 									</ul>
-				
+
 				<h3>Proof sheets</h3>
 				<ul>
 					<li>
-						<a href="proof/glyphs.html">All glyphs</a>
+						Glyphs:
+							<a href="proof/NotoSansDeseret/Regular-diffbrowsers_glyphs.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/text.html">Sample text</a>
+						Text:
+							<a href="proof/NotoSansDeseret/Regular-diffbrowsers_text.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/waterfall.html">Waterfall test</a>
+						Waterfall:
+							<a href="proof/NotoSansDeseret/Regular-diffbrowsers_waterfall.html">Regular</a> 
+					</li>
+					<li>
+						Proofer:
+							<a href="proof/NotoSansDeseret/Regular-diffbrowsers_proofer.html">Regular</a> 
 					</li>
 				</ul>
-			</div>
+
+							</div>
 		</div>
 	</body>
 </html>
